tidy up some page

--- a/finance.css
+++ b/finance.css
@@ -59,6 +59,10 @@ body{
 }
 
 
+.mytable{
+    width: 100%;
+    border: teal;
+}
 /* --------------------------------------------------------- */
 /* ---------------------------CONTENT------------------------ */
 #saldoawal, #mycategory, #mydate, #mytitle, #amount{
